mostly fixed except scrollbar being cutoff under header

--- a/resources/assets/sass/_main.scss
+++ b/resources/assets/sass/_main.scss
@@ -56,6 +56,14 @@ $parallax-ios         : true !default;
   height: 100vh;
   overflow-x: hidden;
   overflow-y: scroll;
+
+}
+
+.browrap {
+  margin-top: rem-calc(65);
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - 4.0625rem);
 }
 
 body {
@@ -117,10 +125,10 @@ input[type='text'], input[type='password'], input[type='email'] {
 }
 
 #app {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-  padding-top: rem-calc(65);
+  //display: flex;
+  //min-height: 100vh;
+  //flex-direction: column;
+  //padding-top: rem-calc(65);
 }
 
 .main-content {
@@ -548,7 +556,7 @@ section.features {
 
 footer {
   border-top: 5px solid $cxred;
-  padding: 4rem 0 8rem;
+  padding: 4rem 0;
   background: url(/images/carbonpattern.png);
   transform: translateZ(0.0001px) scale(1.0);
 
